--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<img src="picture.png" alt="Cute cat">
+<img src="picture.png" alt="my photo", width="300", height="2--">
 
 <h1>Will you be my Valentine? ❤️</h1>
 
@@ -47,3 +47,4 @@ noBtn.addEventListener("mouseover", () => {
 
 </body>
 </html>
+
