Fix image height and restore HTML structure

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<img src="picture.png" alt="my photo", width="300", height="2--">
+<img src="picture.png" alt="my photo", width="300", height="200">
 
 <h1>Will you be my Valentine? ❤️</h1>
 
@@ -47,4 +47,5 @@ noBtn.addEventListener("mouseover", () => {
 
 </body>
 </html>
+
 
