--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<img src="picture.png" alt="my photo", width="300", height="auto">
+<img src="picture.png" alt="my photo", width="300", height="1000">
 
 <h1>Will you be my Valentine? ❤️</h1>
 
@@ -47,6 +47,7 @@ noBtn.addEventListener("mouseover", () => {
 
 </body>
 </html>
+
 
 
 
