--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 </head>
 <body>
 
-<img src="picture.png" alt="my photo", width="300">
+<img src="picture.png" alt="My photo" class="small-photo">
+
 
 <h1>Will you be my Valentine? ❤️</h1>
 
@@ -47,6 +48,7 @@ noBtn.addEventListener("mouseover", () => {
 
 </body>
 </html>
+
 
 
 
