--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 </head>
 <body>
 
-<img src="picture.png" alt="My photo" class="small-photo">
+<img src="photo.jpg" alt="My photo" style="width:300px; height:auto;">
+
 
 
 <h1>Will you be my Valentine? ❤️</h1>
@@ -48,6 +49,7 @@ noBtn.addEventListener("mouseover", () => {
 
 </body>
 </html>
+
 
 
 
