--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <body>
 
-<img src="picture.png" alt="My photo" style="width:300px; height:auto;">
+<img src="picture.png" alt="My photo" style="max-width:100%; height:auto;">
+
+  
 <h1>Will you be my Valentine? ❤️</h1>
 
 <button onclick="yes()">YES 💘</button>
@@ -16,3 +18,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
