--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <img src="picture.png" alt="My photo" style="max-width:100%; height:auto;">
 
   
-<h1>Will you be my Valentine? ❤️</h1>
+<h1> Will you be my Mooshlentine? ❤️</h1>
 
-<button onclick="yes()">YES 💘</button>
-<button id="noBtn">No 😢</button>
+<button onclick="yes()">Yoom 💘</button>
+<button id="noBtn">Nyoom 😢</button>
 
 <script src="script.js"></script>
 </body>
 </html>
+
 
